# Drmix

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakelists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
Assets/: qt.conf  resource.qrc
Assets/QML/: App.qml
Drmix/: CMakeLists.txt  CMakelists.txt  Drmix.cpp  Drmix.hpp  DrmixMain.cpp
Drmix/Assets/: resource.qrc  resource.rc
Drmix/Assets/QML/: App.qml  main.qml
Drmix/Assets/ts/: Drmix_en_US.ts  Drmix_zh_CN.ts
Drmix/Core/: Assert.hpp  Core.cpp  Core.hpp  EntryPoint.hpp  Filesystem.cpp  Filesystem.hpp  Logger.hpp  Mixture.cpp  Mixture.hpp
Drmix/Mixture/: BasicMixture.cpp  BasicMixture.hpp  BatchRenderMixture.cpp  BatchRenderMixture.hpp  Mixture.cpp  Mixture.hpp  ShaderToyMixture.cpp  ShaderToyMixture.hpp  Texture2DMixture.cpp  Texture2DMixture.hpp
Drmix/Object/: Node.cpp  Node.hpp  Object.hpp
Drmix/OpenGL/: IndexBuffer.cpp  IndexBuffer.hpp  OpenGL.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArrayBuffer.cpp  VertexArrayBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Drmix/OpenGL/Renderer/: IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  VertexArrayBuffer.cpp  VertexArrayBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Drmix/OpenGL/Shader/: Shader.cpp  Shader.hpp
Drmix/Shader/: Shader.cpp  Shader.hpp
Drmix/res/Shader/: Batch.frag  Batch.vert  ShaderToy.frag
Drmix/src/: Drmix.cpp
FluentUI/: CMakeLists.txt
Mixture/: CMakeLists.txt
Mixture/BasicMixture/: BasicMixture.cpp  BasicMixture.hpp  CMakeLists.txt
Mixture/RayTracingMixture/: CMakeLists.txt  RayTracing.frag  RayTracingMixture.cpp  RayTracingMixture.hpp  Utillty.hpp
Mixture/RayTracingMixture/Math/: Vec3.cpp  Vec3.hpp
Mixture/RayTracingMixture/Object/: Object.hpp  Sphere.cpp  Sphere.hpp
Mixture/RayTracingMixture/Ray/: Ray.cpp  Ray.hpp
Mixture/ShaderToyMixture/: CMakeLists.txt  ShaderToy.frag  ShaderToyMixture.cpp  ShaderToyMixture.hpp
include/: Drmix.h  Instance.h  Logger.h  SpirvCompiler.h  Utility.h  Vertex.h  VkUtils.h  macros.h
res/: settings.toml  shader.vert
src/: Drmix.cpp  Instance.cpp  SpirvCompiler.cpp  Utility.cpp  VkUtils.cpp  header.cpp  main.cpp
triplet/: x64-windows.cmake
triplets/: x64-windows.cmake
